  (Antonin Décimo, review by Miod Vallat)

- #13243: Enable C compiler warnings internally when building with
  clang-cl or MSVC. Provide fixes too.
  (Antonin Décimo, review by Miod Vallat and Xavier Leroy)

- #13242: Define and use unreachable and trap annotation, and clean-up some
  runtime assertions.
  (Antonin Décimo, review by Miod Vallat, Gabriel Scherer, and David Allsopp)

### Code generation and optimizations:

- #13014: Enable compile-time option -function-sections on all previously
  unsupported native backends (POWER, riscv64 and s390x)
  (Miod Vallat, review by Nicolás Ojeda Bär)

- #7241, #12555, #13076, #13138, #13338, #13152, #13153:
  fix a soundness bug in the pattern-matching compiler
  when side-effects mutate the scrutinee during matching.
  (Gabriel Scherer, review by Nick Roberts)

- #13179: Fix evaluation of toplevel lets in classes containing
  local opens
  (Vincent Laviron, review by Hugo Heuzard, Nathanaëlle Courant
   and Gabriel Scherer)

- #13???: Add -set-global-string option to both compilers, allowing a C symbol
  to be added to the binary with the given name and value.
  (David Allsopp, review by ???)

### Standard library:

- #12884: Add `Queue.drop`
  (Léo Andrès, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #13168: In Array.shuffle, clarify the code that validates the
  result of the user-supplied function `rand`, and improve the
  error message that is produced when this result is invalid.
  (François Pottier, review by Florian Angeletti, Daniel Bünzli
   and Gabriel Scherer)

- #12133: Expose support for printing substrings in Format
  (Florian Angeletti, review by Daniel Bünzli, Gabriel Scherer
   and Nicolás Ojeda Bär)

- #12869: Add List.take, List.drop, List.take_while and List.drop_while
  (Kate Deplaix and Oscar Butler-Aldridge, review by Nicolás Ojeda Bär,
   Craig Ferguson and Gabriel Scherer)

- #12885: move Dynarray to an unboxed representation
  (Gabriel Scherer, suggestions by Vincent Laviron,