@@ -41,9 +41,6 @@ extern void caml_build_primitive_table_builtin(void);
 /* Unload all the previously loaded shared libraries */
 extern void caml_free_shared_libs(void);
 
-/* Return the effective location of the standard library */
-extern char_os * caml_get_stdlib_location(void);
-
 /* Parse ld.conf and add the lines read to caml_shared_libs_path */
 extern char_os * caml_parse_ld_conf(void);
 
